- added code generation before verification models execution - modifications due to profile update

--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/build.properties
@@ -10,4 +10,5 @@ bin.includes = .,\
                icons/,\
                bin/ModelicaML2Modelica_v04.mt,\
                bin/org/,\
-               bin/sim_test_models_data_generation.chain
+               bin/verification_models_data_generation.chain,\
+               bin/verification_models_data_generation_with_cg.chain
