--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
@@ -3,6 +3,7 @@ c_profileName = ModelicaML
 
 # Configuration: Code generation
 c_outputFolder = code-gen/
+c_incFolder = code-inc/
 c_includeModelComments = true
 c_includeAsserts = true
 	#debugMode is used to include code for, e.g. checking if only one OR state is active at an instance or if states are deactivated if the parent state is not active.
@@ -18,9 +19,10 @@ p_path_ModelicaRelationsConstructs = ModelicaML::ModelicaRelationsConstructs
 p_path_ModelicaRequirementConstructs = ModelicaML::ModelicaRequirementConstructs
 p_path_ModelicaSimulationConstructs = ModelicaML::ModelicaSimulationConstructs
 p_path_ModelicaAnnotationConstructs = ModelicaML::ModelicaAnnotationConstructs
-p_path_ModelicaMLTestDefinition = ModelicaML::TestDefinition
-
-p_path_ModelicaMLValueBinding = "ModelicaML::ValueBinding";
+p_path_ModelicaMLTestDefinition = ModelicaML::Verification
+p_path_ModelicaMLValueBinding = ModelicaML::ValueBinding
+p_path_ModelicaMLModelReferences = ModelicaML::ModelReferences
+p_path_ModelicaMLCodeGeneration = ModelicaML::CodeGeneration
 
 	#### ModelicaML specific END
 
@@ -37,20 +39,25 @@ s_enumeration = ModelicaEnumeration
 s_function = Function
 	### ModelicaML specific
 s_calculationModel = CalculationModel
-s_testScenario = TestScenario
-s_test = Test
+s_testScenario = VerificationScenario
+s_test = VerificationModel
 s_requirement = Requirement
 s_requirementRepresentative = RequirementRepresentative
 s_measureOfEffectiveness = MeasureOfEffectiveness
+
 s_ModelicaModelReference = ModelicaModelReference
 s_p_modelPath = modelPath
+
+s_ModelicaModelProxy = ModelicaModelProxy
+
+s_CodeGenerationSpecification = CodeGenerationSpecification
 	#### ModelicaML specific END
 
-	### ModelicaML specific: Test Definition Dependencies
+	### ModelicaML specific: Verification Definition Dependencies
 s_requires = Requires
 s_requiredFor = RequiredFor
 s_usedToVerify = UsedToVerify
-	#### ModelicaML specific END: Test Definition Dependencies
+	#### ModelicaML specific END: Verification  Definition Dependencies
 	
 	
 # Stereotypes: Modelica Classes Properties
