--- a/org.modelica.mdt.test/build.properties
+++ b/org.modelica.mdt.test/build.properties
@@ -1,3 +1,6 @@
 bin.includes = META-INF/,\
-               plugin.xml
+               plugin.xml,\
+               bin/,\
+               lib/abbot.swt.jar,\
+               lib/abbot.jar
 jars.compile.order = 
