Fix warning in build.properties

--- a/org.modelica.mdt.test/build.properties
+++ b/org.modelica.mdt.test/build.properties
@@ -1,5 +1,5 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               bin/,\
                lib/abbot.swt.jar,\
-               lib/abbot.jar 
+               lib/abbot.jar
+output.. = bin/
