--- a/modelicaml/org.openmodelica.modelicaml.profile/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.profile/build.properties
@@ -8,5 +8,6 @@ bin.includes = META-INF/,\
                bin/,\
                plugin.properties,\
                palettes/,\
-               templateModels/
+               templateModels/,\
+               libraries/
 bin.excludes = resources/icons/svg/
