--- a/modelicaml/org.openmodelica.modelicaml.modelica.importer/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.modelica.importer/plugin.xml
@@ -61,5 +61,57 @@
             name="generatedBy">
       </attribute>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:org.eclipse.ui.main.toolbar">
+         <toolbar
+               id="org.openmodelica.modelicaml.modelica.toolbar"
+               label="ModelicaML Modelica">
+            <separator
+                  name="org.openmodelica.modelicaml.modelica.importer.separator3">
+            </separator>
+            <command
+                  commandId="org.openmodelica.modelicaml.modelica.commands.synchronizemodelicamodelproxies"
+                  icon="icons/code.png"
+                  label="Synchronize Modelica Model Proxies"
+                  style="push"
+                  tooltip="Synchronize Modelica Model Proxies">
+               <visibleWhen>
+                  <with
+                        variable="activeEditorId">
+                     <equals
+                           value="org.eclipse.papyrus.core.papyrusEditor">
+                     </equals>
+                  </with>
+               </visibleWhen>
+            </command>
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="activeWorkbenchWindow.activePerspective">
+                  <equals
+                        value="org.openmodelica.modelicaml.perspective">
+                  </equals>
+               </with>
+            </visibleWhen>
+         </toolbar>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            id="org.openmodelica.modelicaml.modelica.commands.synchronizemodelicamodelproxies"
+            name="Synchronize Modelica Model Proxies">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="org.openmodelica.modelicaml.modelica.importer.handlers.SynchronizeModelicaModelProxiesHandler"
+            commandId="org.openmodelica.modelicaml.modelica.commands.synchronizemodelicamodelproxies">
+      </handler>
+   </extension>
 
 </plugin>
