--- a/modelicaml/org.openmodelica.modelicaml.modelica.importer/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.modelica.importer/plugin.xml
@@ -113,5 +113,12 @@
             commandId="org.openmodelica.modelicaml.modelica.commands.synchronizemodelicamodelproxies">
       </handler>
    </extension>
+   <extension
+         point="org.eclipse.papyrus.core.modelListener">
+      <listener
+            name="org.openmodelica.modelicaml.modelica.importer.papyrusListener"
+            realization="org.openmodelica.modelicaml.modelica.importer.views.ModelicaOMCCodeViewer$PapyrusListener">
+      </listener>
+   </extension>
 
 </plugin>
