--- a/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
@@ -32,10 +32,20 @@
    <extension
          point="org.eclipse.papyrus.extensionpoints.uml2.UMLLibrary">
       <library
-            description="Modelica Standard Library 3.2 Proxies"
+            description="Modelica Standard Library 3.2"
             iconpath="resources/icons/icons16/modelicaml_logo_16x16_v02.png"
-            name="Modelica Standard Library 3.2 Proxies"
-            path="pathmap://PATH_LIBRARIES/MSL/model.uml"
+            name="Modelica Standard Library 3.2"
+            path="pathmap://PATH_LIBRARIES/MSL/full/model.uml"
+            provider="OpenModelica Project">
+      </library>
+   </extension>
+   <extension
+         point="org.eclipse.papyrus.extensionpoints.uml2.UMLLibrary">
+      <library
+            description="Modelica Standard Library 3.2 - Proxies (only model structure, no behavior or annotations)"
+            iconpath="resources/icons/icons16/modelicaml_logo_16x16_v02.png"
+            name="Modelica Standard Library 3.2 - Proxies"
+            path="pathmap://PATH_LIBRARIES/MSL/proxies/model.uml"
             provider="OpenModelica Project">
       </library>
    </extension>
