--- a/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
+++ b/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
@@ -31,10 +31,14 @@
 # Author : Adeel Asghar
 #####################################################################
 GDBThread.start.ExecRun.NoAnswer=-exec-run command returned null.
-MDTLineBreakpoint.removeBreakPoint.BreakInsert.NoAnswer=-break-insert command returned null.
+MDTLineBreakpoint.insertBreakPoint.BreakInsert.NoAnswer=-break-insert command returned null.
 MDTLineBreakpoint.removeBreakPoint.BreakDelete.NoAnswer=-break-delete command returned null.
 GDBThread.resume.ExecContinue.NoAnswer=-exec-continue command returned null.
+GDBThread.stepReturn.ExecFinish.NoAnswer=-exec-finish command returned null.
 GDBDebugTarget.handleSignalEvent.ExecContinue.NoAnswer=-exec-continue command returned null.
+GDBDebugTarget.handleBreakPointHitEvent.ExecFinish.NoAnswer=-exec-finish command returned null.
+GDBDebugTarget.handleFunctionFinisedEvent.ExecFinish.NoAnswer=-exec-finish command returned null.
+GDBDebugTarget.handleSteppingEvent.ExecFinish.NoAnswer=-exec-finish command returned null.
 GDBStackFrame.computeVariables.StackListVariables.NoAnswer=-stack-list-variables command returned null.
 GDBThread.getStackFrames.StackInfoFrame.NoAnswer=-stack-info-frame command returned null.
 GDBThread.setCurrentStackFrame.StackSelectFrame.NoAnswer=-stack-select-frame command returned null.
