Migration to Eclipse 3.7, Papyrus 0.8 and Xtext 2

--- a/modelicaml/org.openmodelica.modelicaml.model.explorer.customization/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.model.explorer.customization/build.properties
@@ -1,8 +1,11 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               ModelicaMLCustomization.uiCustom,\
                plugin.xml,\
-               ModelicaML.querySet,\
-               ORIGINAL_UMLPapyrusDefaultBrowserCustomization.uiCustom
+               resources/,\
+               build.properties,\
+               bin/,\
+               src/
 source.. = src/
+src.includes = resources/,\
+               bin/
