Migration to Eclipse 3.7, Papyrus 0.8 and Xtext 2

--- a/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
@@ -50,6 +50,17 @@
       </library>
    </extension>
    <extension
+         point="org.eclipse.papyrus.extensionpoints.uml2.UMLLibrary">
+      <library
+            description="ModelicaML Primitive Types"
+            iconpath="resources/icons/icons16/type.gif"
+            name="ModelicaML Primitive Types"
+            path="pathmap://PATH_LIBRARIES/PredefinedTypes/model.uml"
+            provider="OpenModelica Project">
+      </library>
+   </extension>
+   <!--
+   <extension
          point="org.eclipse.ui.menus">
       <menuContribution
             allPopups="false"
@@ -98,6 +109,7 @@
          </menu>
       </menuContribution>
    </extension>
+   -->
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
